tests/baselines/reference/unresolvedTypeAssertionSymbol.errors.txt
==== tests/cases/compiler/unresolvedTypeAssertionSymbol.ts (1 errors) ====
    var x = 1;
    var y = <asdf>x;
             ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
     
    